Last.fm has changed the way we can listen to artist radios due to licensing. This means that we can't listen to the radio station from multiple artists. Only one artist from now on...

Sorry for the string breakage, but it is a critical fix.
CCMAIL: kde-i18n-doc@kde.org

BUG: 146020

svn path=/branches/stable/extragear/multimedia/amarok/; revision=670063