src/lastfm.cpp
@@ -222,10 +222,9 @@ Controller::createCustomStation() //static
     QString token;
     CustomStationDialog dialog( 0 );
 
-    if( dialog.exec() == QDialog::Accepted ) {
-        const QStringList artists = QStringList::split( ",", dialog.text() );
-        for( uint i = 0; i < artists.count(); i++ )
-            token += ( i > 0 ? "," : "" ) + artists[i].simplifyWhiteSpace();
+    if( dialog.exec() == QDialog::Accepted )
+    {
+        token =  dialog.text();
     }
 
     return token;
@@ -1080,7 +1079,7 @@ CustomStationDialog::CustomStationDialog( QWidget *parent )
 {
     makeVBoxMainWidget();
 
-    new QLabel( i18n( "Enter the name of a band or artist you like:\n(You can enter multiple artists separated by commas)" ), mainWidget() );
+    new QLabel( i18n( "Enter the name of a band or artist you like:" ), mainWidget() );
 
     m_edit = new KLineEdit( mainWidget(), "CustomStationEdit" );
     m_edit->setFocus();
